# Bachelor

./: README.md  pyproject.toml  qr.py
