[project]
name = "blub"
version = "0.1.0"
description = ""
authors = [
    {name = "Lars",email = "ltoensing@axsol.eu"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "qrcode[pil] (>=8.2,<9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
